GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/invalid_incomplete_assign.deca
// Test : syntax_invalid_incomplete_assignment
// But : interdire une expression incomplète après un opérateur.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    int a;
    a == ;
}